feat: API управления автопродлением
